# speech-emotion-recognition

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baseline_cremad.yaml  cnn_cremad.yaml  cnn_meld.yaml  smoke.yaml  wav2vec2_cremad.yaml
docs/: GPU_WAV2VEC2.md  RAPOR.md
odev1/: RAPOR.md  RAPOR_tablolar.md  README.md  __init__.py  build_report.py  evaluation.py  extract.py  features_w2v.py  knn_pipeline.py  manifest_subset.csv  run_experiment.py
scripts/: aggregate_results.py  build_manifest.py  build_pdf.py  download_data.py  predict.py  run_all.py  semisupervised.py  smoke_test.py  train.py
ser/: __init__.py  config.py  constants.py  cross_corpus.py  evaluate.py  semisupervised.py  train.py  utils.py
ser/data/: __init__.py  build_manifest.py  dataset.py  download_cremad.py  download_meld.py  splits.py
ser/features/: __init__.py  io.py  melspec.py  mfcc.py
ser/models/: __init__.py  baseline.py  cnn.py  wav2vec2.py
tests/: test_pipeline.py
